Wed Jul  6 23:13:19 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (opt_call_args): allow trailing comma after assoc
	  argument e.g. 'foo(bar:1,)'.  fixed #3456

Wed Jul  6 22:11:12 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Validate date in
	  "Date:" header

Wed Jul  6 21:29:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): cleanup pointer arithmetic.
	  "size/sizeof(VALUE)" is ugly and easy confusing.
	* cont.c (fiber_initialize_machine_stack_context): ditto.

Wed Jul  6 21:24:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): fix mprotect misuse. A stack
	  guard page should have PROT_NONE.
	* cont.c (fiber_initialize_machine_stack_context):
	  th->machine_stack_maxsize shouldn't be included guard pages size.
	  [Bug #4983][ruby-dev:44043]

Wed Jul  6 21:23:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): use MAP_STACK if it's provided.

Wed Jul  6 21:22:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): use MAP_FAILED instead of -1.

Wed Jul  6 21:21:05 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): remove unnecessary cast.

Wed Jul  6 18:10:13 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Adding space after
	  comma.

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Remove variable
	  `now`. Suppress warning.

Wed Jul  6 12:18:09 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Fix bug depends to
	  time. The test fails if time past 1 second in line 136-145

Tue Jul  5 15:28:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): should dispatch heredoc_end
	  scanner event on an empty here document.  fixed Bug#4543.
