@@ -1,3 +1,8 @@
+Thu Jul  7 00:40:16 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (kill): check the process exited or not before
+	  teminationg it. [Bug #4943]
+
 Wed Jul  6 23:13:19 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* parse.y (opt_call_args): allow trailing comma after assoc
